welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if (talking == true && hour <=7 || talking = true && hour>=20) {
                                  ^parotTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (talking == true && hour <=7 || talking = true && hour>=20) {
  ^